@@ -1,0 +1,5 @@
+v0,v1,v2,v4
+-------------------------------
+1,2,3,2
+1,2,1,1
+1,6,3,2
